--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "eller-resume-v2",
+  "name": "eller-front-end-resume",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build": "tsc"
   },
   "dependencies": {
     "@vue/composition-api": "1.4.6",
