--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "lint": "vue-cli-service lint",
     "build": "vue-cli-service build",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "deploy": "node scripts/gh-pages-deploy.js"
   },
   "dependencies": {
     "@vue/composition-api": "1.4.6",
     "axios": "0.26.0",
     "core-js": "^3.6.5",
+    "execa": "latest",
     "lodash": "4.17.21",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
