- change dist to docs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
-    "outDir": "./dist/",
+    "outDir": "docs",
     "types": [
       "webpack-env"
     ],
